tests/snapshots/integration_cli__build_args_to_config_overrides.snap
---
source: tests/integration_cli.rs
expression: overrides
---
[
    "global/redownload=true",
    "global/reextract=true",
    "task/enabled=false",
    "super:task/enabled=true",
]
