tests/snapshots/integration_cli__cli_git_branches_all.snap
---
source: tests/integration_cli.rs
expression: cli
---
Cli {
    global: GlobalOptions {
        inis: [],
        dry: false,
        log_level: None,
        file_log_level: None,
        log_file: None,
        prefix: None,
        options: [],
        no_default_inis: false,
    },
    command: Some(
        Git(
            GitArgs {
                subcommand: Branches(
                    BranchesArgs {
                        all: true,
                    },
                ),
            },
        ),
    ),
}
