tests/snapshots/integration_cli__cli_git_set_remotes.snap
---
source: tests/integration_cli.rs
expression: cli
---
Cli {
    global: GlobalOptions {
        inis: [],
        dry: false,
        log_level: None,
        file_log_level: None,
        log_file: None,
        prefix: None,
        options: [],
        no_default_inis: false,
    },
    command: Some(
        Git(
            GitArgs {
                subcommand: SetRemotes(
                    SetRemotesArgs {
                        username: "myuser",
                        email: "user@example.com",
                        key: None,
                        no_push: true,
                        push_default: true,
                        path: None,
                    },
                ),
            },
        ),
    ),
}
